crates/wdl-engine/tests/tasks/invalid-placeholder-true-false/error.txt
error: type mismatch for placeholder option `true/false`: expected type `Boolean`, but found `Int`
   ┌─ tests/tasks/invalid-placeholder-true-false/source.wdl:11:44
   │
11 │         String out = "~{true='y' false='n' read_json("not-bool.json")}"
   │                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^ this is type `Int`

